~fix spacing between menu and (login/register buttons || user name)

--- a/src/pageElements/header/header.scss
+++ b/src/pageElements/header/header.scss
@@ -19,7 +19,7 @@
     align-items: center;
 
     .header__menu {
-      margin: 0;
+      margin: 0 30px 0 0;
       padding: 0;
       display: flex;
       flex-direction: row;
@@ -32,15 +32,12 @@
       }
     }
 
-    //:not(:last-child) {
-    //  margin-right: get-vw(30px);
-    //}
-
     //Если залогинен - вертикальный разделитель и имя пользователя
     .header__divider {
       flex-shrink: 0;
       display: block;
       height: 30px;
+      margin-right: 30px;
       border: solid 1px $darkShade10;
     }
 
